@@ -7,6 +7,7 @@ import edu.harvard.iq.dataverse.DatasetFieldType;
 import edu.harvard.iq.dataverse.DatasetVersionServiceBean;
 import edu.harvard.iq.dataverse.Dataverse;
 import edu.harvard.iq.dataverse.DataverseFacet;
+import edu.harvard.iq.dataverse.DataverseMetadataBlockFacet;
 import edu.harvard.iq.dataverse.DvObjectServiceBean;
 import edu.harvard.iq.dataverse.authorization.groups.Group;
 import edu.harvard.iq.dataverse.authorization.groups.GroupServiceBean;
@@ -27,9 +28,11 @@ import java.util.Calendar;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.MissingResourceException;
 import java.util.logging.Level;
@@ -226,6 +229,7 @@ public class SearchServiceBean {
         // -----------------------------------
         // Facets to Retrieve
         // -----------------------------------
+        solrQuery.addFacetField(SearchFields.METADATA_TYPES);
 //        solrQuery.addFacetField(SearchFields.HOST_DATAVERSE);
 //        solrQuery.addFacetField(SearchFields.AUTHOR_STRING);
         solrQuery.addFacetField(SearchFields.DATAVERSE_CATEGORY);
@@ -247,7 +251,9 @@ public class SearchServiceBean {
          * if advancedSearchField is true or false
          *
          */
-        
+
+        List<DataverseMetadataBlockFacet> metadataBlockFacets = new LinkedList<>();
+        //I'm not sure if just adding null here is good for the permissions system... i think it needs something
         if(dataverses != null) {
             for(Dataverse dataverse : dataverses) {
                 if (dataverse != null) {
@@ -255,6 +261,8 @@ public class SearchServiceBean {
                         DatasetFieldType datasetField = dataverseFacet.getDatasetFieldType();
                         solrQuery.addFacetField(datasetField.getSolrField().getNameFacetable());
                     }
+                    // Get all metadata block facets configured to be displayed
+                    metadataBlockFacets.addAll(dataverse.getMetadataBlockFacets());
                 }
             }
         } 
@@ -639,7 +647,15 @@ public class SearchServiceBean {
                 if (facetFieldCount.getCount() > 0) {
                    if(metadataBlockName.length() > 0 ) {
                        localefriendlyName = getLocaleTitle(datasetFieldName,facetFieldCount.getName(), metadataBlockName);
-                    } else {
+                    } else if (facetField.getName().equals(SearchFields.METADATA_TYPES)) {
+                       Optional<DataverseMetadataBlockFacet> metadataBlockFacet = metadataBlockFacets.stream().filter(blockFacet -> blockFacet.getMetadataBlock().getName().equals(facetFieldCount.getName())).findFirst();
+                       if (metadataBlockFacet.isEmpty()) {
+                           // metadata block facet is not configured to be displayed => ignore
+                           continue;
+                       }
+
+                       localefriendlyName = metadataBlockFacet.get().getMetadataBlock().getLocaleDisplayFacet();
+                   } else {
                        try {
                            localefriendlyName = BundleUtil.getStringFromPropertyFile(facetFieldCount.getName(), "Bundle");
                        } catch (Exception e) {
@@ -706,7 +722,7 @@ public class SearchServiceBean {
                     Logger.getLogger(SearchServiceBean.class.getName()).log(Level.SEVERE, null, ex);
                 }
                 if (staticSearchField != null && facetField.getName().equals(staticSearchField)) {
-                    String friendlyName = BundleUtil.getStringFromBundle("staticSearchFields."+staticSearchField);
+                    String friendlyName = BundleUtil.getStringFromPropertyFile("staticSearchFields."+staticSearchField, "staticSearchFields");
                     if(friendlyName != null && friendlyName.length() > 0) {
                         facetCategory.setFriendlyName(friendlyName);
                     } else {
@@ -761,7 +777,7 @@ public class SearchServiceBean {
                 // to avoid overlapping dates
                 end = end - 1;
                 if (rangeFacetCount.getCount() > 0) {
-                    FacetLabel facetLabel = new FacetLabel(start + "-" + end, new Long(rangeFacetCount.getCount()));
+                    FacetLabel facetLabel = new FacetLabel(start + "-" + end, Long.valueOf(rangeFacetCount.getCount()));
                     // special [12 TO 34] syntax for range facets
                     facetLabel.setFilterQuery(rangeFacet.getName() + ":" + "[" + start + " TO " + end + "]");
                     facetLabelList.add(facetLabel);
